--- a/smart-spender/package.json
+++ b/smart-spender/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/oxide-win32-x64-msvc": "^4.0.15",
+    "antd": "^5.24.4",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.5.0",
+    "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.2",
     "next": "15.2.3",
