--- a/smart-spender/package.json
+++ b/smart-spender/package.json
@@ -13,12 +13,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.2",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
   },
