--- a/smart-spender/package.json
+++ b/smart-spender/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alloc/quick-lru": "^5.2.0",
     "@ant-design/icons": "^6.0.0",
     "@react-spring/web": "^9.7.5",
+    "@tailwindcss/node": "^4.0.15",
+    "@tailwindcss/oxide": "^4.0.15",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
+    "i": "^0.3.7",
+    "lightningcss": "^1.29.3",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.2",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
+    "npm": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
