--- a/smart-spender/package.json
+++ b/smart-spender/package.json
@@ -28,6 +28,7 @@
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "npm": "^11.2.0",
+    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
