--- a/smart-spender/package.json
+++ b/smart-spender/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@alloc/quick-lru": "^5.2.0",
     "@ant-design/icons": "^6.0.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/node": "^4.0.15",
     "@tailwindcss/oxide": "^4.0.15",
